# cerebro

./: .env.example  .gitguardian.yaml  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .impeccable.md  .pre-commit-config.yaml  JOURNAL.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: security.yml  tests.yml
cerebro/: __main__.py  config.py  models.py  orchestrator.py  state.py
cerebro/gitintel/: __init__.py  artifacts.py  cache.py  crackscore.py  deep_search.py  github_client.py  identity.py  metrics.py  models.py  owner_resolve.py  profile_inspect.py  query_plan.py  rank.py  repo_inspect.py  repo_search.py  roster.py  skillgen.py  watchlists.py
cerebro/llm/: claude.py  digest.py  triage.py
cerebro/process/: comments.py  dedup.py  extract.py  feedback.py  junkgate.py  prerank.py
cerebro/prompts/: comments.md  digest.md  triage.md
cerebro/sink/: briefs.py  cracked_devs.py  entities.py  export.py  notify.py  vault.py
cerebro/sources/: __init__.py  base.py  crackscan.py  github_devs.py  github_search.py  github_trending.py  gmail.py  hackernews.py  ossinsight.py  reddit.py  reddit_users.py  rss.py  seed_urls.py  showhn.py  x_bird.py  x_twscrape.py  yclaunches.py  ycrfs.py
cerebro/ui/: __init__.py  server.py
config/: cracked_devs.yaml  interest-matrix.yaml  settings.example.yaml  sources.yaml
plans/: cerebro-implementation.md  cracked-dev-discovery-spec.md  cracked-dev-discovery.md  cracked-dev-registry.md
scripts/: bootstrap.sh  com.cerebro.daily.plist  run.sh
tests/: test_cli_cracked_devs.py  test_cli_discover.py  test_cli_roster.py  test_client_token_env.py  test_conformance.py  test_crackscore.py  test_deep_search.py  test_export.py  test_git_search.py  test_gitintel_client.py  test_growth_metrics.py  test_identity.py  test_owner_resolve.py  test_packaging.py  test_profile_identity.py  test_roster.py  test_seed_urls.py  test_source_crackscan.py  test_source_github_devs.py  test_source_reddit_users.py  test_ui_server.py  test_vault_artifacts.py  test_watchlists.py
(+3 files in other folders)
